jogo1/Jogos1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\Greenfoot\lib\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\Greenfoot\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.8.90.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.3.7.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.8.jar;C:\Program Files\Greenfoot\lib\wellbehavedfx-0.3.3.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1
-d
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java
<---- end of javadoc command ---->
Loading source file C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java...
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:17: error: illegal start of expression
    private int atraso=0;
    ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:22: error: class, interface, or enum expected
    public intro(){
           ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:26: error: class, interface, or enum expected
        prepare();
        ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:27: error: class, interface, or enum expected
    }
    ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:28: error: class, interface, or enum expected
    public void act(){
           ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:31: error: class, interface, or enum expected
    if(Greenfoot.isKeyDown("enter") && (temp < 1)){
    ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:33: error: class, interface, or enum expected
        temp1--;
        ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:34: error: class, interface, or enum expected
    }
    ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:38: error: class, interface, or enum expected
        temp2--;
        ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:39: error: class, interface, or enum expected
    }
    ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:43: error: class, interface, or enum expected
        Greenfoot.setWorld(world);
        ^
C:\Users\André Borges\Documents\FPOO\GREENFOOT\jogo1\Jogos1\intro.java:44: error: class, interface, or enum expected
    }
    ^
12 errors
